Wed Nov 07 17:45:48 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add extra "query" parameter to
	  summarise() and highlight() methods, which can be used to
	  override the query used as the basis of the highlighting.

Wed Nov 07 17:30:02 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/highlight.py: Fix tests to correspond to recent change.
	* xappy/searchconnection.py: Add "query_none()" to get an empty
	  query explicitly.  Can be useful as a placeholder.

Tue Nov 06 13:54:13 UTC 2007  Tom Mortimer <tom@lemurconsulting.com>

	* xappy/highlight.py: Highlighter works with stemmed and unstemmed
	  terms. Workaround until we have proper phrase highlighting

Thu Nov 01 14:43:34 UTC 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/win32msvc.tgz: Updated build files for windows.

Wed Oct 31 19:01:03 UTC 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/xapian-bindings-xappy.tgz: Version with a concurrency
	  problem fixed.

Wed Oct 31 17:57:00 UTC 2007  Richard Boulton <richard@lemurconsulting.com>

	* libs/matchspy.cc: Version of matchspy.cc with quick workaround to
	  avoid segfault.

Tue Oct 30 11:12:28 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Document the members of SearchResult.

Tue Oct 30 11:02:22 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add weight and percent members to
	  SearchResult objects.

Mon Oct 29 21:21:27 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* README: Update to tell users to use the tarballs from the libs/
	  subdirectory.

Mon Oct 29 21:19:01 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest2.txt:
	  Fix setting of the prefix to use the correct form of add_prefix,
	  and fix the expected output of scale weight queries to use the
	  new style of output.
