@@ -1,3 +1,9 @@
+Thu Nov 15 08:38:18 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* testsuite/runtests.py: Allow coverage and profiling measures to
+	  be turned on and off easily (not yet with command line options,
+	  but now only needs a simple edit to the code).
+
 Wed Nov 07 17:45:48 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Add extra "query" parameter to
